--- a/Projekt2CavernsOfImpendingDoom/Projekt2CavernsOfImpendingDoom.csproj
+++ b/Projekt2CavernsOfImpendingDoom/Projekt2CavernsOfImpendingDoom.csproj
@@ -51,11 +51,14 @@
     <Compile Include="Character.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="GameBoard.cs" />
+    <Compile Include="HealthPotion.cs" />
+    <Compile Include="Item.cs" />
     <Compile Include="Location.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Room.cs" />
+    <Compile Include="Sword.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
